--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<hello name="{{outracoisa}}"></hello>
+<hello name="{{outroteste}}"></hello>
 <p>
   Start editing to see some magic happen :)
 </p>
